--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
   </div>
 
   <div class="footer">
-    <a href="#header">Alex Hagdahl</a >
-    <p>alex.hagdahl@appliedtechnology.se</p>
+    <div class="footer-text">
+      <a href="#header">Alex Hagdahl</a >
+      <p>alex.hagdahl@appliedtechnology.se</p>
+    </div>
   </div>
 
   <script>
