--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="second-section-item">
       <h2>Fundler</h2>
       <h3>Setting the new standard for simplified investments</h2>
-      <p>My experience as a software developer in the finance industry has equipped me with a deeper understanding of the financial markets and the critical role technology plays a part in. My main responsibility was to decouple the current monolithic architecture into a more modern microservice based architecture. I got to work with an amazing team and learned different ways of working with Scrum. Here I developed a compliance module and wrote anti money laundering algorithms that identified suspicious transactions. The module also handled the validation and storage of KYC answers in a GDPR-compliant way. I got the opportunity to design an implementation for a new deposit system responsible for creating model portfolios, handling money transactions, and placing trades on the market for funds and ETFs. This experience has not only sharpened my technical skills but also my ability to communicate and collaborate effectively within cross-functional teams.</p>
+      <p>My experience as a software developer in the financial industry has equipped me with a deeper understanding of the financial markets and the critical role technology plays a part in. My main responsibility was to decouple the current monolithic architecture into a more modern microservice based architecture. I got to work with an amazing team and learned different ways of working with Scrum. Here I developed a compliance module and wrote anti money laundering algorithms that identified suspicious transactions. The module also handled the validation and storage of KYC answers in a GDPR-compliant way. I got the opportunity to design an implementation for a new deposit system responsible for creating model portfolios, handling money transactions, and placing trades on the market for funds and ETFs. This experience has not only sharpened my technical skills but also my ability to communicate and collaborate effectively within cross-functional teams.</p>
       <br>
       <br>
       <a href="https://fundler.se/" target="_blank">fundler.se</a>
@@ -70,7 +70,7 @@
 
       <div class="interests-item">
         <h2>Mathematics</h2>
-        <p>I think math is one of the most beautiful things in the world. The elegance of simplicity and the universality of mathematical truth is where I find my inspiration. I truly believe that it is the language of god and out duty to explore its depth.</p>
+        <p>I think math is one of the most beautiful things in the world. The elegance of simplicity and the universality of mathematical truth is where I find my inspiration. I truly believe that it is the language of god and our duty to explore its depth.</p>
       </div>
     </div>
     <h2 class="something">Being a software developer is not just my job, it's my hobby. And if you work with something you love, you never have to work a day in your life.</h2>
