--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
   <div class="first-section">
     <h1>ALEX HAGDAHL</h1>
     <div class="typewriter-container">
-      <p>Software Development Consultant</p>
+      <p>Software Developer</p>
     </div>
     <a href="#contact">Contact Me</a>
   </div>
   
   <div class="second-section">
     <div class="second-section-item">
-      <h2>&lt/salt&gt</h2>
-      <h3>Passion to Profession</h3>
-      <p>I started my career at &lt/salt&gt as the youngest software developer ever at the company. Taking an intensive three month training program for full stack web development in .NET where I learned an API-first approach, different database management systems using entity framework, and frontend skills in react. We also learned dependency injection design patterns, DevOps skills in Azure and the amazing potential of docker and containerized applications. It was an amazing experience where I met some wonderful people. Together with my colleges, we built a decentralized platform for handling digital signatures using RSA digital signature algorithms. Building such a project gave me hands-on experience with all the different parts of software development and agile work methods.</p>
+      <h2>Majority</h2>
+      <h3>Ambition Obsession Together</h2>
+      <p>Majority is a mobile banking platform focused on providing inclusive and accessible financial solutions to migrants in the US, making it possible to get banked even without an SSN. In my role as a software developer, I’ve had the privilege of working alongside an amazing team of colleagues, tackling complex projects that have made a real-world impact. My primary responsibility has been developing cross-border remittance solutions by integrating with numerous payment providers, expanding our reach into new countries while ensuring scalability and security. Additionally, I’ve contributed to enhancing domestic ACH transfers within the US through partnerships with Dwolla and Plaid. A significant focus has been placed on building robust AML and KYC systems, ensuring full regulatory compliance. The platform is built in .NET with a clean microservice architecture, hosted in Azure and orchestrated using Kubernetes and Terraform. For seamless telemetry and observability, we rely on a strong infrastructure using Elastic Kibana and Datadog. Overall, my role here has deepened my understanding of the global financial system and allowed me to contribute to building secure, scalable systems that truly make a difference, all while working alongside a talented and dedicated team.</p>
       <br>
       <br>
-      <a href="https://salt.dev/" target="_blank">salt.dev</a>
+      <a href="https://majority.com/" target="_blank">majority.com</a>
     </div>
-    
+
     <div class="second-section-item">
       <h2>Fundler</h2>
       <h3>Setting the new standard for simplified investments</h2>
@@ -43,6 +43,15 @@
       <br>
       <br>
       <a href="https://fundler.se/" target="_blank">fundler.se</a>
+    </div>
+
+    <div class="second-section-item">
+      <h2>&lt/salt&gt</h2>
+      <h3>Passion to Profession</h3>
+      <p>I started my career at &lt/salt&gt as the youngest software developer ever at the company. Taking an intensive three month training program for full stack web development in .NET where I learned an API-first approach, different database management systems using entity framework, and frontend skills in react. We also learned dependency injection design patterns, DevOps skills in Azure and the amazing potential of docker and containerized applications. It was an amazing experience where I met some wonderful people. Together with my colleges, we built a decentralized platform for handling digital signatures using RSA digital signature algorithms. Building such a project gave me hands-on experience with all the different parts of software development and agile work methods.</p>
+      <br>
+      <br>
+      <a href="https://salt.dev/" target="_blank">salt.dev</a>
     </div>
 
     <div class="second-section-item">
@@ -121,7 +130,7 @@
   <div class="footer">
     <div class="footer-text">
       <a href="#header">Alex Hagdahl</a >
-      <p>alex.hagdahl@appliedtechnology.se</p>
+      <p>alex.hagdahl@gmail.se</p>
     </div>
   </div>
 
