--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="footer">
     <div class="footer-text">
       <a href="#header">Alex Hagdahl</a >
-      <p>alex.hagdahl@gmail.se</p>
+      <p>alex.hagdahl@gmail.com</p>
     </div>
   </div>
 
