--- a/tip.html
+++ b/tip.html
@@ -66,6 +66,7 @@
     <div class="buttons">
       <button id="tip5">$5</button>
       <button id="tip10">$10</button>
+      <button id="tip15">$15</button>
       <button id="tipCustom">Custom</button>
     </div>
      <div id="qrCode">
@@ -83,6 +84,7 @@
 
     document.getElementById('tip5').addEventListener('click', showQRCode);
     document.getElementById('tip10').addEventListener('click', showQRCode);
+    document.getElementById('tip15').addEventListener('click', showQRCode);
     document.getElementById('tipCustom').addEventListener('click', showQRCode);
   </script>
 </body>
